--- a/src/pacman.scss
+++ b/src/pacman.scss
@@ -1,3 +1,9 @@
 @use 'reset';
 @use 'variables';
 @use 'main';
+@use 'variables';
+@use 'base';
+@use 'typography';
+@use 'layout';
+@use 'buttons';
+@use 'cards';
