completes baseand reset

--- a/css/pacman.css
+++ b/css/pacman.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /***
     The new CSS reset - version 1.11.2 (last updated 15.11.2023)
     GitHub page: https://github.com/elad2412/the-new-css-reset
@@ -117,92 +116,86 @@ body {
   padding: 0;
 }
 
-h1 {
-  position: relative;
-  font-size: 2rem;
-  font-weight: 700;
-  color: #FFFFFF;
+.unordered-list {
+  list-style-type: disc;
+  margin: 1rem 0;
+  padding-left: 1rem;
 }
-h1:hover {
-  color: #f6c31c;
-}
-h1::after {
-  content: "😊";
-  right: -20px;
-  font-size: 36px;
+.unordered-list .list-item {
+  margin-bottom: 0.5rem;
 }
 
-div#black-box {
+.ordered-list {
+  list-style-type: decimal;
+  margin: 1rem 0;
+  padding-left: 1rem;
+}
+.ordered-list .list-item {
+  margin-bottom: 0.5rem;
+}
+
+.roman-list {
+  list-style-type: upper-roman;
+  margin: 1rem 0;
+  padding-left: 1rem;
+}
+.roman-list .list-item {
+  margin-bottom: 0.5rem;
+}
+
+.link {
+  color: #f6c31c;
+  text-decoration: none;
+}
+.link:hover {
+  text-decoration: underline;
+}
+
+.form {
+  margin: 1rem 0;
+}
+.form .form-group {
+  margin-bottom: 1rem;
+}
+.form .form-group .form-label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.form .form-group .form-input,
+.form .form-group .form-textarea,
+.form .form-group .form-select {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #344966;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  color: #0A0C1F;
+}
+.form .form-group .form-select option {
+  background-color: #FFFFFF;
+  color: #0A0C1F;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 1rem 0;
+}
+.table .table-head {
   background-color: #0A0C1F;
   color: #FFFFFF;
 }
-
-.btn {
-  background-color: #f6c31c;
-  border-radius: 20px;
-  color: #FFFFFF;
-  padding: 1rem 2rem;
-  margin: 2rem;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-  display: inline-block;
-  text-decoration: none;
+.table .table-head .table-row .table-header {
+  padding: 0.5rem;
+  text-align: left;
 }
-.btn:hover {
-  background-color: #344966;
-  color: #0A0C1F;
-  padding: 1rem 2rem;
+.table .table-body .table-row:nth-child(even) {
+  background-color: white;
+  color: #344966;
 }
-
-.btn-error {
-  background-color: #d32752;
-  border-radius: 20px;
-  color: #FFFFFF;
-  padding: 1rem 2rem;
-  margin: 2rem;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-  display: inline-block;
-  text-decoration: none;
-}
-.btn-error:hover {
-  background-color: #a81f41;
-  color: #0A0C1F;
-  padding: 1rem 2rem;
-}
-
-.btn-success {
-  background-color: #19e635;
-  border-radius: 20px;
-  color: #FFFFFF;
-  padding: 1rem 2rem;
-  margin: 2rem;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-  display: inline-block;
-  text-decoration: none;
-}
-.btn-success:hover {
-  background-color: #14b82a;
-  color: #0A0C1F;
-  padding: 1rem 2rem;
-}
-
-.card {
-  background-color: #344966;
-  border: 1px solid #d32752;
-  padding: 2rem;
-  margin: 2rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.card .card-heading h2 {
-  color: #19e635;
-}
-.card .para p {
-  color: #0A0C1F;
+.table .table-body .table-row .table-cell {
+  padding: 0.5rem;
+  border: 1px solid #344966;
 }
 
 /*# sourceMappingURL=pacman.css.map */
