--- a/src/pacman.scss
+++ b/src/pacman.scss
@@ -1,9 +1,8 @@
-@use 'reset';
-@use 'variables';
-@use 'main';
-@use 'variables';
-@use 'base';
-@use 'typography';
-@use 'layout';
-@use 'buttons';
-@use 'cards';
+@use 'variables' as vars;
+
+@use 'base/base';
+@use 'typography/typography';
+@use 'typography/font-family';
+@use 'layout/layout';
+@use 'components/buttons';
+@use 'components/cards';
